--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -6,7 +6,8 @@ on:
 jobs:
   generate:
     name: e2e-${{ matrix.app_type }}
-    runs-on: macos-10.15
+    runs-on: self-hosted
+#    runs-on: macos-10.15
     if: "!contains(github.event.head_commit.message, '[ci skip]') && !contains(github.event.head_commit.message, '[skip ci]') && !contains(github.event.pull_request.title, '[skip ci]') && !contains(github.event.pull_request.title, '[ci skip]') && !contains(github.event.ref_type, '[tag]')"
     timeout-minutes: 60
     strategy:
