--- a/generators/app/templates/package.json
+++ b/generators/app/templates/package.json
@@ -44,6 +44,10 @@
     "enzyme-adapter-react-16": "1.15.5",
     "eslint-config-prettier": "6.15.0",
     "eslint-plugin-prettier": "3.1.4",
+    "eslint": "7.14.0",
+    "babel-jest": "25.1.0",
+    "jest": "25.1.0",
+    "@react-native-community/eslint-config": "1.1.0",
     "lint-staged": "10.5.1",
     "react-native-app-auth": "6.0.1",
     "detox": "17.11.1",
