--- a/generators/app/templates/package.json
+++ b/generators/app/templates/package.json
@@ -34,6 +34,10 @@
     "react-native-web": "0.14.8",
     "@expo/vector-icons":"10.2.1",
     "formik": "2.2.5",
+    "@react-native-community/datetimepicker": "3.0.0",
+    "react-datepicker": "3.3.0",
+    "react-native-modal-datetime-picker": "9.1.0",
+    "react-native-picker-select": "8.0.3",
     "yup": "0.31.0"
   },
   "devDependencies": {
