--- a/generators/app/templates/package.json
+++ b/generators/app/templates/package.json
@@ -39,6 +39,9 @@
     "react-native-modal-datetime-picker": "9.1.0",
     "react-native-picker-select": "8.0.3",
     "expo-linking": "1.0.5",
+    "expo-auth-session": "2.0.0",
+    "expo-web-browser": "8.5.0",
+    "expo-random": "9.0.0",
     "yup": "0.31.0"
   },
   "devDependencies": {
@@ -56,11 +59,9 @@
     "jest": "25.1.0",
     "@react-native-community/eslint-config": "1.1.0",
     "lint-staged": "10.5.1",
-    "react-native-app-auth": "6.0.1",
     "detox": "17.11.1",
     "mocha": "8.2.1",
     "mockery": "2.1.0",
-    "react-dom": "16.13.1",
     "prettier": "2.1.2",
     "rimraf": "3.0.2"
   }
