--- a/generators/app/templates/package.json
+++ b/generators/app/templates/package.json
@@ -9,7 +9,6 @@
     "prop-types": "15.7.2",
     "querystringify": "2.2.0",
     "ramda": "0.27.1",
-    "react-native-vector-icons": "7.1.0",
     "react-native-keyboard-aware-scroll-view": "0.9.3",
     "react-redux": "7.2.2",
     "redux": "4.0.5",
@@ -27,21 +26,21 @@
     "@react-navigation/stack": "5.12.6",
     "@react-navigation/native": "5.8.9",
     "@react-navigation/devtools":"5.1.18",
-    "react-native-gesture-handler": "1.7.0",
+    "react-native-gesture-handler": "1.8.0",
     "react-native-reanimated": "1.13.0",
-    "react-native-safe-area-context": "3.1.4",
-    "react-native-screens": "2.10.1",
+    "react-native-safe-area-context": "3.1.9",
     "react-native-web": "0.14.8",
-    "@expo/vector-icons":"10.2.1",
+    "@expo/vector-icons":"^12.0.0",
     "formik": "2.2.5",
-    "@react-native-community/datetimepicker": "3.0.0",
+    "@react-native-community/datetimepicker": "3.0.4",
     "react-datepicker": "3.3.0",
     "react-native-modal-datetime-picker": "9.1.0",
     "react-native-picker-select": "8.0.3",
-    "expo-linking": "1.0.5",
-    "expo-auth-session": "2.0.0",
-    "expo-web-browser": "8.5.0",
-    "expo-random": "9.0.0",
+    "expo-linking": "~2.0.0",
+    "expo-auth-session": "~3.0.0",
+    "expo-web-browser": "~8.6.0",
+    "expo-splash-screen": "~0.8.1",
+    "expo-random": "~10.0.0",
     "yup": "0.31.0"
   },
   "devDependencies": {
@@ -52,6 +51,7 @@
     "buffer": "6.0.1",
     "enzyme": "3.11.0",
     "enzyme-adapter-react-16": "1.15.5",
+    "jest-expo": "^40.0.1",
     "eslint-config-prettier": "6.15.0",
     "eslint-plugin-prettier": "3.1.4",
     "eslint": "7.14.0",
