--- a/generators/app/templates/package.json
+++ b/generators/app/templates/package.json
@@ -28,6 +28,7 @@
     "@react-navigation/devtools":"5.1.18",
     "react-native-gesture-handler": "1.8.0",
     "react-native-reanimated": "1.13.0",
+    "react-native-screens": "2.10.1",
     "react-native-safe-area-context": "3.1.9",
     "react-native-web": "0.14.8",
     "@expo/vector-icons":"^12.0.0",
