--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -14,20 +14,15 @@ jobs:
       matrix:
         node_version: [12.16.1]
         app_type:
-          - SessionDtoApp
+          - JwtDtoApp
           - OauthApp
-          # - JwtWebsocketsApp
         include:
-          - app_type: SessionDtoApp
-            auth_type: session
+          - app_type: JwtDtoApp
+            auth_type: jwt
             jhi_dto: true
           - app_type: OauthApp
             auth_type: oauth2
             jhi_dto: false
-          # - app_type: JwtWebsocketsApp
-          #   auth_type: jwt
-          #   jhi_dto: true
-          #   jhi_websockets: true
     env:
       JHI_REACT_NATIVE_APP_NAME: ${{ matrix.app_type }}
       JHI_AUTH_TYPE: ${{ matrix.auth_type }}
