--- a/generators/app/templates/package.json
+++ b/generators/app/templates/package.json
@@ -60,6 +60,7 @@
     "@react-native-community/eslint-config": "1.1.0",
     "lint-staged": "10.5.1",
     "detox": "17.11.1",
+    "detox-expo-helpers": "^0.6.0",
     "mocha": "8.2.1",
     "mockery": "2.1.0",
     "prettier": "2.1.2",
