get entity e2e tests mostly working

--- a/generators/app/templates/package.json
+++ b/generators/app/templates/package.json
@@ -59,9 +59,10 @@
     "jest": "25.1.0",
     "@react-native-community/eslint-config": "1.1.0",
     "lint-staged": "10.5.1",
-    "detox": "17.11.1",
-    "detox-expo-helpers": "^0.6.0",
-    "expo-detox-hook": "^1.0.10",
+    "detox": "17.14.6",
+    "detox-expo-helpers": "0.6.0",
+    "expo-detox-hook": "1.0.10",
+    "redux-devtools-extension": "2.13.8",
     "mocha": "8.2.1",
     "mockery": "2.1.0",
     "prettier": "2.1.2",
