--- a/generators/app/templates/package.json
+++ b/generators/app/templates/package.json
@@ -27,7 +27,8 @@
     "@react-navigation/devtools":"5.1.18",
     "react-native-gesture-handler": "1.8.0",
     "react-native-reanimated": "1.13.0",
-    "react-native-screens": "2.10.1",
+    "react-native-screens": "~2.15.0",
+    "@react-native-picker/picker": "1.9.2",
     "react-native-safe-area-context": "3.1.9",
     "react-native-web": "0.14.8",
     "@expo/vector-icons":"^12.0.0",
@@ -51,6 +52,7 @@
     "buffer": "6.0.1",
     "enzyme": "3.11.0",
     "enzyme-adapter-react-16": "1.15.5",
+    "expect": "26.6.2",
     "jest-expo": "^40.0.1",
     "eslint-config-prettier": "6.15.0",
     "eslint-plugin-prettier": "3.1.4",
