--- a/generators/app/templates/package.json
+++ b/generators/app/templates/package.json
@@ -23,6 +23,7 @@
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/drawer": "5.11.3",
     "@react-navigation/stack": "5.12.6",
+    "react-native-sectioned-multi-select": "0.8.1",
     "@react-navigation/native": "5.8.9",
     "@react-navigation/devtools":"5.1.18",
     "react-native-gesture-handler": "1.8.0",
