--- a/generators/app/templates/package.json
+++ b/generators/app/templates/package.json
@@ -33,6 +33,7 @@
     "react-native-safe-area-context": "3.1.9",
     "react-native-web": "0.14.8",
     "@expo/vector-icons":"^12.0.0",
+    "expo-constants": "9.3.3",
     "formik": "2.2.5",
     "@react-native-community/datetimepicker": "3.0.4",
     "react-datepicker": "3.3.0",
