--- a/generators/app/templates/package.json
+++ b/generators/app/templates/package.json
@@ -1,7 +1,7 @@
 {
   "version": "0.0.1",
   "dependencies": {
-    "@react-native-community/async-storage": "1.12.1",
+    "@react-native-community/async-storage": "~1.12.0",
     "apisauce": "2.0.0",
     "format-json": "1.0.3",
     "identity-obj-proxy": "3.0.0",
@@ -27,7 +27,7 @@
     "@react-navigation/native": "5.8.9",
     "@react-navigation/devtools":"5.1.18",
     "react-native-gesture-handler": "1.8.0",
-    "react-native-reanimated": "1.13.0",
+    "react-native-reanimated": "~1.13.0",
     "react-native-screens": "~2.15.0",
     "@react-native-picker/picker": "1.9.2",
     "react-native-safe-area-context": "3.1.9",
