many changes to fix github actions
load searchEngine and detox config before entity generation
check auth type before generation
fix app tests - only use backend dir for e2e tests
update dependencies for the generator
install jhipster and expo-cli globally
pin node version to LTS for CI
don't skip-install for tests
fix prettier transform when skipClient is set in JDL or .yo-rc.sjon
fix double import and add snapshot update to test command
remove android badge, don't start oauth2 backend, wait for expo as well
increase wait time for splashcreen for e2e tests

--- a/.github/workflows/generator.yml
+++ b/.github/workflows/generator.yml
@@ -1,4 +1,4 @@
-name: Generator
+name: Generator Tests
 on:
   push:
     branches:
@@ -11,7 +11,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        node_version: [12.16.1]
+        node_version: [14.x]
         os: [ubuntu-latest]
     steps:
       - uses: actions/checkout@v2
@@ -28,10 +28,7 @@ jobs:
           JHI_SCRIPTS: ./test/scripts
         run: $JHI_SCRIPTS/git-config.sh
         shell: bash
-#        using npm i instead of npm ci due to installing master of generator-jhipster
-      - name: npm i
-        run: npm i
-#      - name: npm ci
-#        run: npm ci
+      - name: npm ci
+        run: npm ci
       - name: lint and test
         run: npm run test
