--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -18,7 +18,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        node_version: [12.16.1]
+        node_version: [14.x]
         app_type:
           - OauthDtoApp
           - JwtWebsocketsApp
