--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -20,16 +20,24 @@ jobs:
       matrix:
         node_version: [14.x]
         app_type:
-          - OauthDtoApp
+          - JwtApp
+          - JwtDtoApp
           - JwtWebsocketsApp
+          - OauthApp
         include:
-          - app_type: OauthDtoApp
-            auth_type: oauth2
+          - app_type: JwtApp
+            auth_type: jwt
+            jhi_dto: false
+          - app_type: JwtDtoApp
+            auth_type: jwt
             jhi_dto: true
           - app_type: JwtWebsocketsApp
             auth_type: jwt
             jhi_dto: false
             jhi_websockets: true
+          - app_type: OauthApp
+            auth_type: oauth2
+            jhi_dto: false
     env:
       JHI_REACT_NATIVE_APP_NAME: ${{ matrix.app_type }}
       JHI_AUTH_TYPE: ${{ matrix.auth_type }}
