fix e2e artifacts, rename jhipster-react-native repo to generator-jhipster-react-native

--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -51,7 +51,7 @@ jobs:
         name: 'TOOLS: install node dependencies'
         shell: bash
       - run: npm i && npm link
-        name: 'TOOLS: npm install and link in jhipster-react-native'
+        name: 'TOOLS: npm install and link in generator-jhipster-react-native'
         shell: bash
       - run: $SCRIPT_DIR/copy-jdl-file.sh
         name: 'SETUP: copy the JDL file for the backend and app'
