--- a/generators/app/templates/package.json
+++ b/generators/app/templates/package.json
@@ -55,20 +55,20 @@
     "enzyme": "3.11.0",
     "enzyme-adapter-react-16": "1.15.5",
     "expect": "26.6.2",
-    "jest-expo": "^40.0.1",
     "eslint-config-prettier": "7.1.0",
     "eslint-plugin-prettier": "3.3.1",
     "eslint": "7.18.0",
     "babel-jest": "26.6.3",
     "jest": "26.6.3",
+    "jest-circus": "26.6.3",
+    "jest-expo": "^40.0.1",
     "@react-native-community/eslint-config": "2.0.0",
     "lint-staged": "10.5.3",
-    "detox": "17.14.6",
-    "detox-expo-helpers": "0.6.0",
+    "detox": "18.2.1",
+    "detox-expo-helpers": "git+https://github.com/ruddell/detox-expo-helpers.git#9d02be37c9864dc470fd692f0d69075614b75b31",
     "expo-detox-hook": "1.0.10",
     "@expo/webpack-config": "^0.12.53",
     "redux-devtools-extension": "2.13.8",
-    "mocha": "8.2.1",
     "mockery": "2.1.0",
     "prettier": "2.2.1",
     "patch-package": "6.2.2",
