remove generation of .env file, allow empty commit on sample app

--- a/.github/workflows/sample-app.yml
+++ b/.github/workflows/sample-app.yml
@@ -63,7 +63,7 @@ jobs:
                   npm install
                   git add .
                   git status
-                  git commit -m "Generate the application with the ${{ github.ref }} version"
+                  git commit -m "Generate the application with the ${{ github.ref }} version" --allow-empty
             - name: 'PUSH: push the updated sample app to Expo'
               run: |
                 cd sample-app
