--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
         "eslint-config-prettier": "7.2.0",
         "eslint-plugin-import": "2.22.1",
         "eslint-plugin-prettier": "3.3.1",
+        "husky": "4.3.8",
         "jsdoc": "3.6.6",
         "lint-staged": "10.5.3",
         "mocha": "8.2.1",
