change indent size to 2, matches generated code

--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -48,11 +48,11 @@ jobs:
           node-version: ${{ matrix.node_version }}
         # for running pipelines locally with `act`
         env:
-          RUNNER_TEMP: "/tmp/"
+          RUNNER_TEMP: '/tmp/'
       - run: git --no-pager log -n 10 --graph --pretty='%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue) <%an>%Creset' --abbrev-commit
       - uses: actions/setup-node@v2.1.4
         with:
-            node-version: ${{ matrix.node_version }}
+          node-version: ${{ matrix.node_version }}
       - name: Config git variables
         run: $SCRIPT_DIR/git-config.sh
       - run: $SCRIPT_DIR/install-node-dependencies.sh
