--- a/.github/workflows/generator.yml
+++ b/.github/workflows/generator.yml
@@ -24,7 +24,7 @@ jobs:
           node-version: ${{ matrix.node_version }}
         # for running pipelines locally with `act`
         env:
-          RUNNER_TEMP: "/tmp/"
+          RUNNER_TEMP: '/tmp/'
       - run: git --no-pager log -n 10 --graph --pretty='%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue) <%an>%Creset' --abbrev-commit
       - name: Config git variables
         env:
