--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generator-jhipster-react-native",
-  "version": "4.0.0-alpha.2",
+  "version": "4.0.0-beta.0",
   "description": "React Native Blueprint for existing JHipster Apps",
   "keywords": [],
   "homepage": "https://github.com/ruddell/generator-jhipster-react-native",
