--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -9,13 +9,14 @@ defaults:
     shell: bash
 jobs:
   generate:
-    name: e2e-${{ matrix.app_type }}
+    name: e2e-${{ matrix.app_type }}-${{ matrix.jhipster_version }}
     runs-on: ubuntu-latest
     if: "!contains(github.event.head_commit.message, '[ci skip]') && !contains(github.event.head_commit.message, '[skip ci]') && !contains(github.event.pull_request.title, '[skip ci]') && !contains(github.event.pull_request.title, '[ci skip]') && !contains(github.event.ref_type, '[tag]')"
     timeout-minutes: 60
     strategy:
       fail-fast: false
       matrix:
+        jhipster_version: [beta]
         node_version: [14.x]
         app_type:
           - OauthDtoApp
@@ -38,6 +39,7 @@ jobs:
       JHI_AUTH_TYPE: ${{ matrix.auth_type }}
       JHI_DTO: ${{ matrix.dto }}
       JHI_WEBSOCKETS: ${{ matrix.websockets }}
+      JHIPSTER_VERSION: ${{ matrix.jhipster_version }}
       JHI_ENTITY_JDL: ${{ matrix.entity_jdl }}
       SCRIPT_DIR: ./test/scripts
       PLATFORM: ios
