--- a/generators/app/templates/package.json
+++ b/generators/app/templates/package.json
@@ -1,7 +1,8 @@
 {
+  "name": "app-dependencies",
+  "description": "Dependencies managed by Blueprint - use latest versions",
   "version": "0.0.1",
   "dependencies": {
-    "@react-native-community/async-storage": "~1.12.0",
     "apisauce": "2.0.1",
     "format-json": "1.0.3",
     "identity-obj-proxy": "3.0.0",
@@ -19,29 +20,16 @@
     "sockjs-client": "1.5.0",
     "net": "1.0.2",
     "@react-native-community/masked-view": "0.1.10",
-    "@react-navigation/drawer": "5.12.2",
-    "@react-navigation/stack": "5.14.1",
+    "@react-navigation/drawer": "5.12.3",
+    "@react-navigation/stack": "5.14.2",
     "react-native-sectioned-multi-select": "0.8.1",
     "@react-navigation/native": "5.9.2",
     "@react-navigation/devtools":"5.1.20",
-    "react-native-gesture-handler": "1.8.0",
-    "react-native-reanimated": "~1.13.2",
-    "react-native-screens": "~2.15.2",
-    "@react-native-picker/picker": "1.9.2",
     "react-native-safe-area-context": "3.1.9",
-    "react-native-web": "0.14.10",
-    "@expo/vector-icons":"^12.0.3",
-    "expo-constants": "~9.3.3",
     "formik": "2.2.6",
-    "@react-native-community/datetimepicker": "3.0.4",
     "react-datepicker": "3.4.1",
     "react-native-modal-datetime-picker": "9.1.0",
     "react-native-picker-select": "8.0.4",
-    "expo-linking": "~2.0.1",
-    "expo-auth-session": "~3.0.0",
-    "expo-web-browser": "~8.6.0",
-    "expo-splash-screen": "~0.8.1",
-    "expo-random": "~10.0.0",
     "yup": "0.32.8"
   },
   "devDependencies": {
@@ -55,20 +43,18 @@
     "expect": "26.6.2",
     "eslint-config-prettier": "7.2.0",
     "eslint-plugin-prettier": "3.3.1",
-    "eslint": "7.18.0",
+    "eslint": "7.19.0",
     "babel-jest": "26.6.3",
     "jest": "26.6.3",
     "jest-circus": "26.6.3",
-    "jest-expo": "^40.0.1",
     "@react-native-community/eslint-config": "2.0.0",
-    "lint-staged": "10.5.3",
-    "detox": "18.2.2",
+    "lint-staged": "10.5.4",
+    "detox": "18.3.1",
     "detox-expo-helpers": "git+https://github.com/ruddell/detox-expo-helpers.git#9d02be37c9864dc470fd692f0d69075614b75b31",
     "expo-detox-hook": "1.0.10",
-    "@expo/webpack-config": "^0.12.53",
     "redux-devtools-extension": "2.13.8",
     "mockery": "2.1.0",
-    "typescript": "4.1.3",
+    "typescript": "4.1.4",
     "prettier": "2.2.1",
     "patch-package": "6.2.2",
     "rimraf": "3.0.2"
